Fixed the alignment of the Document Search Bar (including in Canvas) #107

--- a/src/scss/User Interface/documentSearch.scss
+++ b/src/scss/User Interface/documentSearch.scss
@@ -1,12 +1,8 @@
 /* #region  [User Interface] Document Search */
 :is(.mod-active .document-search-container, .document-search-container) {
-	position: relative;
-	right: var(--scroll-bar-size);
-	/* width: calc(100% - var(--scroll-bar-size)); */
 	height: var(--header-height);
 	padding: var(--size-4-1) 0;
 	margin: unset;
-	/* margin-bottom: var(--header-height); */
 	background: var(--background-secondary-blur);
 	border-bottom: 1px solid var(--window-border);
 	-webkit-backdrop-filter: blur(var(--blur-intensity));
